[gd_scene load_steps=4 format=3 uid="uid://bew5wg50rajch"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_mgclj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_haaly"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tack3"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
corner_detail = 20

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mgclj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -116.5
offset_top = -91.5
offset_right = 116.5
offset_bottom = 91.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="StartenButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_haaly")
text = "Starten"

[node name="LadenButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_haaly")
text = "Laden"

[node name="OptionenButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_haaly")
text = "Optionen"

[node name="BeendenButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_haaly")
text = "Beenden"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.5
offset_top = -303.0
offset_right = 145.5
offset_bottom = -166.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_tack3")
text = "Name"

[connection signal="pressed" from="VBoxContainer/StartenButton" to="." method="_on_starten_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LadenButton" to="." method="_on_laden_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionenButton" to="." method="_on_optionen_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BeendenButton" to="." method="_on_beenden_button_pressed"]
